--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,14 +9,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap" rel="stylesheet" />
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet" />
 </head>
-
 <body>
     <header>
         <div class="container header-container text-center">
             <div class="mb-4">
                 <img src="./assets/poison-text.png" alt="poison-text" class="img-fluid mt-2 mb-5" />
             </div>
-
             <div class="principal-title">
                 <h1 class="buy-poison">Buy poison.</h1>
                 <h2 class="trust-us">Trust us.</h2>
@@ -35,7 +32,7 @@
                         </div>
                     </li>
                     <li>
-                        <div>
+                        <div class="button-container">
                             <div class="rectangule1"></div>
                             <button class="uppercase"><strong>Drink now!</strong> </button>
                             <div class="rectangule2"></div>
@@ -56,5 +53,4 @@
         </div>
     </header>
 </body>
-
 </html>
