--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <header>
+    <header class="fade-out">
         <div class="container header-container">
             <div class="image-text-container">
                 <img src="./assets/poison-text.png" alt="Poison text" class="img-fluid mt-2 mb-5">
@@ -57,7 +57,7 @@
         </div>
     </header>
   
-    <section class="development">
+    <section id="section1" class="development fade-out">
         <div class="container">
             <div class="section-title">
                 <span class="section-number">03 &middot; 05</span>
@@ -79,7 +79,7 @@
         </div>
     </section>
 
-    <section class="flavours">
+    <section id="section2" class="flavours fade-out">
         <div class="container">
             <div class="section-title">
                 <span class="section-number2">02 &middot; 05</span>
